--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "docker:create": "docker build -t docker-build-test-app .",
+    "docker:run": "docker run --rm -it -v %cd%:/root/build docker-build-test-app"
   },
   "private": true,
   "dependencies": {
@@ -19,7 +21,7 @@
     "@angular/platform-browser": "^12.0.1",
     "@angular/platform-browser-dynamic": "^12.0.1",
     "@angular/router": "^12.0.1",
-    "@capacitor/android": "^4.0.0",
+    "@capacitor/android": "4.4.0",
     "@capacitor/camera": "^4.0.0",
     "@capacitor/core": "^4.0.0",
     "@capacitor/filesystem": "^4.0.0",
